src/objects/datasan__Setting__c.object
<CustomObject>
    <fields>
        <fullName>datasan__Abbreviate_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uses address abbreviations such as &quot;St&quot; instead of &quot;Street&quot; or &quot;L&quot; instead of &quot;Level&quot;.</description>
        <inlineHelpText>Uses address abbreviations such as &quot;St&quot; instead of &quot;Street&quot; or &quot;L&quot; instead of &quot;Level&quot;.</inlineHelpText>
        <label>Abbreviate Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datasan__Available_SOTs__c</fullName>
        <description>The purchased reference data set (Source Of Truth). E.g. AUPAF,GNAF,NZPAF</description>
        <inlineHelpText>The purchased reference data set (Source Of Truth). E.g. AUPAF,GNAF,NZPAF</inlineHelpText>
        <label>Available SOTs</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Batch_Match_Hour__c</fullName>
        <inlineHelpText>The Hour when Batch Match must start.</inlineHelpText>
        <label>At Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datasan__Batch_Match_Last_Performed_On__c</fullName>
        <inlineHelpText>Date when Batch Match was last performed.</inlineHelpText>
        <label>Batch Match Last Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>datasan__Batch_Match_Minute__c</fullName>
        <inlineHelpText>The Minute when Batch Match must start.</inlineHelpText>
        <label>At Minute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datasan__Batch_Match_Run_Each__c</fullName>
        <inlineHelpText>Select the frequency of Batch Matching.</inlineHelpText>
        <label>Run Each</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Fortnight</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datasan__Batch_Match_Run_On__c</fullName>
        <inlineHelpText>The days on which Batch Matching must be performed.</inlineHelpText>
        <label>On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>datasan__Batch_Match_Run_Each__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>datasan__Batch_Match_Start_Date__c</fullName>
        <inlineHelpText>The date when Batch Matching will commence.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>datasan__Default_Country__c</fullName>
        <description>The default country that is auto-populated in the designated country field when DataSan address validation is used. E.g. AUSTRALIA.</description>
        <inlineHelpText>The default country that is auto-populated in the designated country field when DataSan address validation is used. E.g. AUSTRALIA.</inlineHelpText>
        <label>Default Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Endpoint__c</fullName>
        <defaultValue>&quot;https://hosted.mastersoftgroup.com/harmony/rest/&quot;</defaultValue>
        <description>The URL which the app accesses to get suggestions. Please do not modify if unsure.</description>
        <inlineHelpText>The URL which the app accesses to get suggestions. Please do not modify if unsure.</inlineHelpText>
        <label>End Point</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Format_Address_with_Capital_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores address in capital case instead of the default title case. E.g. 1 YORK STREET instead of 1 York Street.</description>
        <inlineHelpText>Stores address in capital case instead of the default title case. E.g. 1 YORK STREET instead of 1 York Street.</inlineHelpText>
        <label>Format Address with Capital Case?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datasan__Installation_Guide__c</fullName>
        <defaultValue>&quot;http://datasan.com.au/go/installation-guide&quot;</defaultValue>
        <inlineHelpText>Click on the link to view detailed installation steps.</inlineHelpText>
        <label>Installation Guide</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>datasan__Key__c</fullName>
        <description>The Key is used for licensing purposes. Please do not modify if unsure.</description>
        <inlineHelpText>The Key is used for licensing purposes. Please do not modify if unsure.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datasan__Temporarily_Stop_Batch_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to stop Batch Matching temporarily without changing the overall Batch Match settings.</inlineHelpText>
        <label>Temporarily Stop Batch Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>datasan__Usage_Info__c</fullName>
        <formula>IMAGE(&quot;https://d1c24wnrse4bd3.cloudfront.net/api/sf/1.8/images/UsageInfo.png&quot;, &quot;Usage Info&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>DataSan Usage Info</inlineHelpText>
        <label>Usage Info</label>
        <type>Text</type>
    </fields>
    <label>Setting</label>
    <nameField>
        <label>Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>